--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ torch
 sacremoses
 sentencepiece
 transformers
-sacrebleu==2.3.1
+sacrebleu
 indic-nlp-library-IT2 @ git+https://github.com/VarunGumma/indic_nlp_library
